# emc-assist

./: .gitignore  CLAUDE.md  LICENSE  NOTICE  README.md  pyproject.toml
docs/: 00_product_brief.md  01_mvp_scope.md  02_user_groups_and_features.md  03_architecture.md  04_agent_contracts.md  05_knowledge_ingestion.md  06_local_ltspice_runner.md  07_ui_and_interactive_recommendations.md  08_decision_log.md  09_security_privacy_licensing.md  10_result_handling.md  11_roadmap.md  README.md
knowledge/: INDEX_STATUS.md  PDFS_TO_FETCH.txt  README.md
prompts/: coordinator_system.md  recommendations_v1.md
schemas/: agent_finding.schema.json  agent_task.schema.json  analysis_result.schema.json  chunk_index.schema.json  diagnostic_narrative.schema.json  knowledge_pack.schema.json  parasitic_injection.schema.json  parasitic_model.schema.json  parasitics_reevaluated.schema.json  project_config.schema.json  recommendation.schema.json  signal_map.schema.json  simulation_run.schema.json  source_manifest.schema.json
scripts/: append_dcdc_sources.py  build_source_manifest.py  fetch_seed_pdfs.py  plot_case002_before_after.py  plot_detectors.py  plot_schematic.py  repair_user_context.py
tests/: conftest.py  test_adapter.py  test_agents.py  test_asc_converter.py  test_asc_writer.py  test_average_detector.py  test_cancel_run.py  test_cli.py  test_cli_knowledge.py  test_cli_project_parasitics.py  test_cli_recommendations.py  test_cli_simulate.py  test_cli_variants.py  test_composer.py  test_decisions.py  test_detector_plot.py  test_detectors.py  test_fragment.py  test_fragments.py  (+56 more)
(+193 files in other folders)
